--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>pixel drawing board</title>
     <link rel="stylesheet" href="./css/style.css">
     <script async src="./js/main.js"></script>
+    <script async src="./js/colors.js"></script>
   </head>
   <body>
     <div class="content">
@@ -14,8 +15,45 @@
       </div>
       <div class="misc-wrapper">
         <div class="drawing-board-setup">
-          <label for="rc">Rows and columns</label>
-          <input type="number" name="rc" value="32" max="100" min="1">
+          <div class="input-wrapper">
+            <label for="rows">Rows</label>
+            <input type="number" name="rows" value="32" placeholder="Number of grids per row" max="100" min="1">
+          </div>
+          <div class="input-wrapper">
+            <label for="columns">Columns</label>
+            <input type="number" name="columns" value="32" placeholder="Number of grids per column" max="100" min="1">
+          </div>
+        </div>
+        <div class="thickness-setup">
+          <div class="input-wrapper">
+            <label for="thickness">Thickness</label>
+            <input type="range" name="thickness" value="1" placeholder="Thickness" max="100" min="1">
+          </div>
+        </div>
+        <div class="color-picker">
+          <div class="input-wrapper">
+            <label for="favcolor">Colors</label>
+            <input type="color" name="favcolor" value="#000000" placeholder="Colors">
+          </div>
+          <div class="color-board">
+            <ul class="color-groups" id="color-groups">
+              <!-- <li class="color"><a href="javascript:void(0)" style="background: #FADDD1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FAD3D1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FAD1E6;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #E5D1FA;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #D4D1FA;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #D1E3FA;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #D1F3FA;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #D1FAF0;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #D1FAD7;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #EBFAD1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FAF9D1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FAEFD1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FAE6D1;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #F2E2D9;"></a></li>
+              <li class="color"><a href="javascript:void(0)" style="background: #FFFFFF;"></a></li> -->
+            </ul>
+          </div>
         </div>
       </div>
     </div>
