--- a/index.html
+++ b/index.html
@@ -33,25 +33,10 @@
         <div class="color-picker">
           <div class="input-wrapper">
             <label for="favcolor">Colors</label>
-            <input type="color" name="favcolor" value="#000000" placeholder="Colors">
+            <input type="color" id="current-color" name="favcolor" value="#000000" placeholder="Colors">
           </div>
           <div class="color-board">
             <ul class="color-groups" id="color-groups">
-              <!-- <li class="color"><a href="javascript:void(0)" style="background: #FADDD1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FAD3D1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FAD1E6;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #E5D1FA;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #D4D1FA;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #D1E3FA;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #D1F3FA;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #D1FAF0;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #D1FAD7;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #EBFAD1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FAF9D1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FAEFD1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FAE6D1;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #F2E2D9;"></a></li>
-              <li class="color"><a href="javascript:void(0)" style="background: #FFFFFF;"></a></li> -->
             </ul>
           </div>
         </div>
