--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script async src="./js/main.js"></script>
     <script async src="./js/colors.js"></script>
+    <script async src="./js/size.js"></script>
   </head>
   <body>
     <div class="content">
@@ -16,20 +17,20 @@
       <div class="misc-wrapper">
         <div class="drawing-board-setup">
           <div class="input-wrapper">
-            <label for="rows">Rows</label>
-            <input type="number" name="rows" value="32" placeholder="Number of grids per row" max="100" min="1">
+            <label for="rows">Rows and Columns</label>
+            <input type="number" id="current-size" name="rows" value="32" placeholder="The number of rows and columns" max="100" min="1">
           </div>
-          <div class="input-wrapper">
+          <!-- <div class="input-wrapper">
             <label for="columns">Columns</label>
             <input type="number" name="columns" value="32" placeholder="Number of grids per column" max="100" min="1">
-          </div>
+          </div> -->
         </div>
-        <div class="thickness-setup">
+        <!-- <div class="thickness-setup">
           <div class="input-wrapper">
             <label for="thickness">Thickness</label>
             <input type="range" name="thickness" value="1" placeholder="Thickness" max="100" min="1">
           </div>
-        </div>
+        </div> -->
         <div class="color-picker">
           <div class="input-wrapper">
             <label for="favcolor">Colors</label>
