--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <script defer src="./js/tools.js"></script>
   </head>
   <body>
-    <div class="content">
-      <div class="drawing-board-wrapper">
-        <canvas id="drawing-board"></canvas>
+    <div class="app-content">
+      <div class="misc-wrapper-left">
         <div class="curr-grid-position">X: 0, Y: 0</div>
       </div>
-      <div class="misc-wrapper">
+      <div class="misc-wrapper-center">
+        <div class="drawing-board-wrapper">
+          <canvas id="drawing-board"></canvas>
+        </div>
+      </div>
+      <div class="misc-wrapper-right">
         <div class="drawing-board-setup">
           <div class="input-wrapper">
             <label for="rows">Rows and Columns</label>
