feat: add css box-shadow export

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
             <div class="save-as-box-shadow-wrapper">
               <label for="image-size">Save as css box-shadow</label>
-              <div class="save-as-box-shadow-wrapper-content">
-                <select id="boxShadowSize" name="image-size" placeholder="select image size"></select>
-                <button type="button" class="download-btns" id="saveToBoxShadow">Save</button>
+              <div class="save-as-box-shadow-wrapper-content input-wrapper">
+                <input type="number" id="pre-grid-size" name="rows" value="5" placeholder="Each width" max="20" min="1">
+                <button type="button" data-clipboard-text="" class="box-shadow-btns" id="saveToBoxShadow">Save</button>
               </div>
             </div>
           </div>
